# PyFluids

./: .gitignore  LICENSE  MANIFEST.in  PyPI.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md
.github/workflows/: build-tests.yml  codeql-analysis.yml  publish-pypi.yml  python-publish.yml
pyfluids/: __init__.py
pyfluids/config/: __init__.py  pyfluids_config.py  pyfluids_config_builder.py  unit_converter.py
pyfluids/enums/: __init__.py  fluids_list.py  mix.py  phases.py
pyfluids/fluid_props/: __init__.py  fluid_lists.py  fluids.py  inputs.py  phases.py
pyfluids/fluids/: __init__.py  abstract_fluid.py  fluid.py  mixture.py
pyfluids/humid_air/: humid_air.py
pyfluids/humid_air_props/: __init__.py  humid_air.py  humid_air_inputs.py
pyfluids/interfaces/: __init__.py  fluid_interfaces.py  input_interfaces.py
pyfluids/io/: __init__.py  abstract_input.py  input.py  input_humid_air.py  outputs_validator.py
src/pyfluids/: __init__.py
src/pyfluids/config/: units_system.py
src/pyfluids/enums/: __init__.py  fluids_list.py  mix.py  phases.py
src/pyfluids/fluids/: __init__.py  abstract_fluid.py  mixture.py
src/pyfluids/humid_air/: __init__.py
src/pyfluids/io/: input_humid_air.py
tests/: test_fluid_interfaces.py  test_fluid_lists.py  test_fluids.py  test_humid_air.py  test_humid_air_inputs.py  test_inputs.py  test_phases.py
tests/config/: test_pyfluids_config.py  test_pyfluids_config_builder.py  test_unit_converter.py  test_units_system.py
tests/enums/: test_fluids_list.py  test_mix.py  test_phases.py
tests/fluids/: test_fluid.py  test_fluid_extended.py  test_fluid_processes.py  test_input_extended.py  test_mixture.py  test_mixture_processes.py
tests/humid_air/: test_humid_air.py  test_humid_air_extended.py  test_humid_air_processes.py  test_input_humid_air.py  test_input_humid_air_extended.py
tests/io/: test_input.py  test_input_extended.py  test_input_humid_air.py  test_input_humid_air_extended.py
