[tool.poetry]
name = "pyfluids"
version = "2.7.1"
description = "Simple, full-featured, lightweight CoolProp wrapper for Python"
authors = [
    "Vladimir Portyanikhin <v.portyanikhin@ya.ru>",
]
license = "MIT"
readme = "PyPI.md"
homepage = "https://github.com/portyanikhin/PyFluids"
repository = "https://github.com/portyanikhin/PyFluids"
documentation = "https://github.com/portyanikhin/PyFluids"
keywords = [
    "CoolProp",
    "fluids",
    "mixtures",
    "humid",
    "air",
    "thermophysical",
    "properties",
    "thermodynamics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
packages = [
    { include = "pyfluids" },
]

[tool.poetry.dependencies]
python = ">=3.8, <3.13"
CoolProp = "6.6.0"
tomli = "2.1.0"

[tool.poetry.group.test.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
pytest-cov = "5.0.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"