[project]
name = "pyfluids"
version = "2.8.2"
description = "Simple, full-featured, lightweight CoolProp wrapper for Python"
readme = "PyPI.md"
requires-python = ">=3.9, <3.15"
license = "MIT"
authors = [{ name = "Vladimir Portyanikhin", email = "v.portyanikhin@ya.ru" }]
keywords = [
    "CoolProp",
    "fluids",
    "mixtures",
    "humid",
    "air",
    "thermophysical",
    "properties",
    "thermodynamics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["CoolProp==7.2.0", "tomli~=2.3"]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "pytest-cov"]

[project.urls]
homepage = "https://github.com/portyanikhin/PyFluids"
source = "https://github.com/portyanikhin/PyFluids"
releasenotes = "https://github.com/portyanikhin/PyFluids/releases"
documentation = "https://github.com/portyanikhin/PyFluids"

[build-system]
requires = ["uv_build~=0.9"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
